# AC215_NutriSnap

./: .gitignore  README.md  docker-compose.yml
.github/: codecov.yml
.github/workflows/: ci.yml  deploy.yml  ml-pipeline.yml
app/: package.json
app/pages/: log.vue
backend/: .ruff.toml  Dockerfile  database.py  gemini_utils.py  inference.py  main.py  models.py  pytest.ini  requirements.txt  reset_db.py  schemas.py  seed.py  seed_example.py
backend/tests/: conftest.py  test_gemini_utils.py  test_inference.py  test_main.py  test_models.py
blog-post/: blog-post.md
docs/: application_design.md
frontend/: .eslintrc.cjs  .gitignore  Dockerfile  nuxt.config.ts  package.json  vitest.config.ts
frontend/layouts/: default.vue
frontend/pages/: index.vue  log.vue
frontend/tests/pages/: index.spec.ts  log.spec.ts
infra/: Pulumi.yaml  __main__.py
milestone5/: milestone5.md
src/: .ruff.toml  Dockerfile.example  Dockerfile.preprocess  docker-compose.yml  gcs_utils.py  preprocess.py  pyproject.toml  train.py
src/deploy/vertex/: Dockerfile  app.py  requirements.txt  test_predict.py
src/preprocess/: preprocess.py
src/tests/: __init__.py  test_gcs_utils.py
src/train/: train.py
